[metadata]
name = print9
version = 0.1.1
author = Vincent de Neuf
author_email = 0189vn@gmail.com
description = A short description of print9
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vincentdeneuf/print9
license = MIT
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src
